# LoggerCpp

./: CMakeLists.txt  main.cpp
src/: Log.hpp  logger.cpp  logger.hpp
